Fixed nav bar overlap issues

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,14 +7,17 @@
   display: grid; 
   grid-template-rows: 1fr 15fr .3fr;
   grid-template-columns: 1fr 4fr 1fr;
-  /* background-color: lightblue; */
+  overflow: scroll;
 }
 
 .header {
   grid-row: 1;
   background-color: rgba(28, 29, 29, 0.822);
-  position: fixed; 
+  position: sticky;
+  top: 0; 
+  z-index: 1000 !important;
   width: 100vw;
+  grid-column: 1 /span 3;
 }
 
 .main {
@@ -22,7 +25,6 @@
   background-color: rgb(140, 201, 221);
   grid-row: 2;
   grid-column: 2;
-  margin-top: 80px;
 }
 
 .footer {
